examples/9_Extended_Istio_Traffic_Split/service-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-s1-v1
  labels:
    app: nginx-app-1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app-1
      version: v1
  template:
    metadata:
      labels:
        app: nginx-app-1
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-s1-v2
  labels:
    app: nginx-app-1
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app-1
      version: v2
  template:
    metadata:
      labels:
        app: nginx-app-1
        version: v2
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-1
  labels:
    app: nginx-app-1
    service: nginx-app-v1
spec:
  ports:
    - port: 9090
      name: http
      targetPort: 80
  selector:
    app: nginx-app-1
