examples/9_Extended_Istio_Traffic_Split/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - example.com
  gateways:
    - service-gateway
  http:
    - route:
        - destination:
            port:
              number: 9090
            host: nginx-service-1.default.svc.cluster.local
            subset: v1
          weight: 60 #  60% of 80 = 75% approx network

        - destination:
            port:
              number: 9090
            host: nginx-service-1.default.svc.cluster.local
            subset: v2
          weight: 20 # 20% of 80 = 25 approx network

        - destination:
            port:
              number: 9080
            host: nginx-service-2.default.svc.cluster.local
          weight: 20 # 30% service-2
